namespace TutoriasDeClases.Modelos
{
    public class Tutor : Usuario
    {
        // Hereda de Usuario: Edad, Especializacion, Nombre, Apellido, Correo, Rol, ContrasenaHash
    }
}