namespace TutoriasDeClases.Interfaces
{
    public interface IPago
    {
        bool Procesar(double monto);
    }
}