namespace TutoriasDeClases.Interfaces
{
    public interface IPrecioStrategy
    {
        double Calcular(double precioBase);
    }
}