// Interfaces/Inotificacion.cs
namespace TutoriasDeClases.Interfaces
{
    public interface INotificacion
    {
        void Enviar(string mensaje);
    }
}