namespace TutoriasDeClases.Modelos
{
    public class Estudiante : Usuario
    {
        // Hereda de Usuario: Edad, Especializacion, Nombre, Apellido, Correo, Rol, ContrasenaHash
    }
}